--- a/relay-java/build.gradle
+++ b/relay-java/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'application'
 mainClassName = 'com.genymobile.gnirehtet.Main'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation 'junit:junit:4.12'
 }
 
 jar {
